structure fix; function arguments allocation added; other fixes;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,10 @@ set(CMAKE_LINKER llvm-link)
 add_definitions("${LLVM_FLAGS}")
 
 set(CMAKE_BUILD_TYPE Debug CACHE STRING "default to debug" FORCE)
-
-aux_source_directory("${PROJECT_SOURCE_DIR}/." SRC_LIST)
-file(GLOB INCLUDE_LIST "${PROJECT_SOURCE_DIR}/include/*.h")
-
-
-include_directories("${PROJECT_SOURCE_DIR}/include/")
+#aux_source_directory("${PROJECT_SOURCE_DIR}/." SRC_LIST)
+file(GLOB_RECURSE INCLUDE_LIST RELATIVE "${PROJECT_SOURCE_DIR}/" "*.h")
+file(GLOB_RECURSE SRC_LIST RELATIVE "${PROJECT_SOURCE_DIR}/" "*.cpp")
+#file(APPEND SRC_LIST "${PROJECT_SOURCE_DIR}/")
 
 add_executable(${PROJECT_NAME} ${SRC_LIST} ${INCLUDE_LIST})
 target_link_libraries(${PROJECT_NAME} ${LLVM_LD_FLAGS} ${LLVM_LIBS} ${LLVM_EXECENGINE_LD_FLAGS} -lpthread -ldl -lcurses)
